@@ -465,16 +465,16 @@ m68hc11sio_info (struct hw *me)
       t = hw_event_remain_time (me, controller->tx_poll_event);
       n = (clock_cycle - t) / controller->baud_cycle;
       n = controller->data_length - n;
-      sim_io_printf (sd, "  Transmit finished in %ld cycles (%d bit%s)\n",
-		     (long) t, n, (n > 1 ? "s" : ""));
+      sim_io_printf (sd, "  Transmit finished in %s (%d bit%s)\n",
+		     cycle_to_string (cpu, t), n, (n > 1 ? "s" : ""));
     }
   if (controller->rx_poll_event)
     {
       signed64 t;
 
       t = hw_event_remain_time (me, controller->rx_poll_event);
-      sim_io_printf (sd, "  Receive finished in %ld cycles\n",
-		     (long) t);
+      sim_io_printf (sd, "  Receive finished in %s\n",
+		     cycle_to_string (cpu, t));
     }
   
 }
