@@ -1,3 +1,14 @@
+2000-09-10  Stephane Carrez  <Stephane.Carrez@worldnet.fr>
+
+	* sim-main.h: Define cycle_to_string.
+	* dv-m68hc11tim.c (cycle_to_string): New function to translate 
+	the cpu cycle into some formatted time string.
+	(m68hc11tim_print_timer): Use it.
+	* dv-m68hc11sio.c (m68hc11sio_info): Use cycle_to_string.
+	* dv-m68hc11spi.c (m68hc11spi_info): Likewise.
+	* interrupts.c (interrupts_info): Likewise.
+	* m68hc11_sim.c (cpu_info): Likewise.
+
 2000-09-06  Stephane Carrez  <Stephane.Carrez@worldnet.fr>
 
 	* dv-m68hc11tim.c (m68hc11tim_timer_event): Compute the overflow
